feat: Update project config and manifest
Refactors the project configuration and manifest file for better PWA compatibility and build process.

- Updates `package.json` with corrected dependencies, devDependencies, and build script.
- Modifies `index.html` to better handle safe area insets and iOS meta tags.
- Enhances `manifest.json` with a description, orientation, and updated theme/background colors.
- Simplifies `vite.config.ts` for a cleaner build setup with relative paths.

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
 {
   "short_name": "WordFlow",
   "name": "WordFlow Puzzle",
+  "description": "A minimal, ad-free word puzzle game. Connect letters to discover hidden words.",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3771/3771261.png",
@@ -10,8 +11,9 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#3b82f6",
+  "orientation": "portrait",
+  "theme_color": "#0f172a",
   "background_color": "#0f172a"
 }
