--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,6 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#0f172a",
-  "background_color": "#0f172a"
+  "theme_color": "#042f2e",
+  "background_color": "#042f2e"
 }
